Update project details for N-MAP scanning

--- a/data/projects.json
+++ b/data/projects.json
@@ -1,9 +1,9 @@
 [
   {
-    "id": "proj-example",
-    "title": "Example Project",
-    "description": "Temporary placeholder project",
-    "tags": ["Demo"],
-    "url": "/files/example.pdf"
+    "id": "n-map",
+    "title": "N-MAP-(Scanning Commands)",
+    "description": "Basic Commands for Scanning Networks",
+    "tags": ["nmap","scanning"],
+    "url": "/files/N-Map_Scanning.pdf"
   }
 ]
