--- a/data/projects.json
+++ b/data/projects.json
@@ -6,4 +6,18 @@
     "tags": ["nmap","scanning"],
     "url": "/files/N-Map_Scanning.pdf"
   }
+  {
+    "id": "SQLi-Lab-1",
+    "title": "SQLi-Audi 1 (GITHUB LABS) Part-1",
+    "description": "This Project pdf includes the Solution of first 8 important SQL Injection Labs, which are too basic to understand as a beginner in SQL injection. ",
+    "tags": ["sql","sqlinjection"],
+    "url": "/files/SQL_BLEED.pdf"
+  }
+  {
+    "id": "sqli_Bleed_2",
+    "title": "SQLi-Audi 1 (GITHUB LABS) Part-2",
+    "description": "This Project pdf includes the little advanced topic which are also must important to know --> Solution of 8,9 ",
+    "tags": ["sql","sqlinjection"],
+    "url": "/files/sqli_Bleed_2.pdf"
+  }
 ]
